prevent overflow on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -140,6 +140,7 @@ Responsive CSS
 }
 @media screen and (max-width:575px){
   .stickyFooter{
+    max-width:100vw;
     display: flex;
     align-items: center;
     padding: 8px 8px 14px;
@@ -379,7 +380,7 @@ body{
     line-height: 24px;
     color: #10161b;
 }
-
+body, html { overflow-x:hidden; }
 /*==Scrollbar==*/
 
 ::-webkit-scrollbar {
